# qemu-hello-world-app

./: .clang-format  .gitignore  CMakeLists.txt  opkg_build.sh
opkg-build/CONTROL/: control
src/: main.c
